--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
   "scripts": {
     "start": "react-scripts start",
     "test": "react-scripts test",
+    "build": "react-scripts build",
     "eject": "react-scripts eject",
     "deploy": "yarn build && firebase deploy --only hosting:maklab",
-    "dev": "webpack serve",
-    "build": "webpack"
+    "dev": "webpack serve"
   },
   "eslintConfig": {
     "extends": [
