--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.8.0",
     "react-loading-skeleton": "^3.0.1",
     "react-redux": "^7.2.4",
@@ -29,7 +30,7 @@
     "test": "react-scripts test",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "deploy": "yarn build && firebase deploy --only hosting:maklab",
+    "deploy": "yarn build && firebase deploy --only hosting:dynlab",
     "dev": "webpack serve"
   },
   "eslintConfig": {
